# data-processor

./: README.md  setup.cfg
scripts/: sync.sh
src/data_processor/daemon/: daemon.py  process_runner.py  subset_task_runner.sh  task_runner.py  task_runner.sh
src/data_processor/tools/common/: csv_formatter.py  formatter.py  geotiff_formatter.py  netcdf4_formatter.py
src/data_processor/tools/regridder/: README.md  aggregator.py  csv_formatter.py  extractor.py  formatter.py  geotiff_formatter.py  netcdf4_formatter.py  netcdf4formatter.py  regridder.py  utils.py
src/data_processor/tools/subsetter/: extractor.py  subsetter.py
test/data_processor_tests/: job_launcher.py
