[metadata]
name = eocis_data_processor
version = 0.0,1
author = Niall mcCarroll
author_email = n.f.mccarroll@reading.ac.uk
description = Test
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com
project_urls =
    Bug Tracker = https://github.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

